--- a/hivemind/hivemind.vcxproj
+++ b/hivemind/hivemind.vcxproj
@@ -79,7 +79,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>NDEBUG;_CONSOLE;_SCL_SECURE_NO_WARNINGS;JSON_DLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;_CONSOLE;_SCL_SECURE_NO_WARNINGS;_RELEASE;JSON_DLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>$(ProjectDir)include;$(SolutionDir)..\SDK\s2client-api\include;$(SolutionDir)..\SDK\boost-geometry\include;$(SolutionDir)..\SDK\jsoncpp\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
@@ -142,6 +142,7 @@
     <ClInclude Include="include\exception.h" />
     <ClInclude Include="include\external\clipper.hpp" />
     <ClInclude Include="include\hive_array2.h" />
+    <ClInclude Include="include\hive_config.h" />
     <ClInclude Include="include\hive_geometry.h" />
     <ClInclude Include="include\hive_math.h" />
     <ClInclude Include="include\hive_polygon.h" />
@@ -188,6 +189,7 @@
     <ClCompile Include="src\controller.cpp" />
     <ClCompile Include="src\database.cpp" />
     <ClCompile Include="src\database_verify.cpp" />
+    <ClCompile Include="src\debug.cpp" />
     <ClCompile Include="src\distancemap.cpp" />
     <ClCompile Include="src\exception.cpp" />
     <ClCompile Include="src\external\clipper.cpp" />
