--- a/hivemind/hivemind.vcxproj
+++ b/hivemind/hivemind.vcxproj
@@ -134,6 +134,7 @@
     <ClInclude Include="include\brain_macro.h" />
     <ClInclude Include="include\builder.h" />
     <ClInclude Include="include\cache.h" />
+    <ClInclude Include="include\chokepoint.h" />
     <ClInclude Include="include\console.h" />
     <ClInclude Include="include\controllers.h" />
     <ClInclude Include="include\database.h" />
