Move platform utils to separate header

--- a/hivemind/hivemind.vcxproj
+++ b/hivemind/hivemind.vcxproj
@@ -155,6 +155,7 @@
     <ClInclude Include="include\map.h" />
     <ClInclude Include="include\map_analysis.h" />
     <ClInclude Include="include\messaging.h" />
+    <ClInclude Include="include\platform_windows.h" />
     <ClInclude Include="include\player.h" />
     <ClInclude Include="include\regiongraph.h" />
     <ClInclude Include="include\sc2_forward.h" />
