--- a/hivemind/hivemind.vcxproj
+++ b/hivemind/hivemind.vcxproj
@@ -168,6 +168,7 @@
     <ClInclude Include="include\platform_windows.h" />
     <ClInclude Include="include\player.h" />
     <ClInclude Include="include\regiongraph.h" />
+    <ClInclude Include="include\researcher.h" />
     <ClInclude Include="include\sc2_forward.h" />
     <ClInclude Include="include\stdafx.h" />
     <ClInclude Include="include\strategy.h" />
@@ -216,6 +217,7 @@
     <ClCompile Include="src\player.cpp" />
     <ClCompile Include="src\playermanager.cpp" />
     <ClCompile Include="src\regiongraph.cpp" />
+    <ClCompile Include="src\researcher.cpp" />
     <ClCompile Include="src\stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
