--- a/hivemind/hivemind.vcxproj.filters
+++ b/hivemind/hivemind.vcxproj.filters
@@ -273,6 +273,9 @@
     <ClInclude Include="include\brain_creep.h">
       <Filter>Header Files\Systems</Filter>
     </ClInclude>
+    <ClInclude Include="include\researcher.h">
+      <Filter>Header Files\Systems</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\stdafx.cpp">
@@ -403,6 +406,9 @@
     </ClCompile>
     <ClCompile Include="src\brain_queen.cpp">
       <Filter>Source Files\Brain</Filter>
+    </ClCompile>
+    <ClCompile Include="src\researcher.cpp">
+      <Filter>Source Files\Systems</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
