--- a/hivemind/hivemind.vcxproj
+++ b/hivemind/hivemind.vcxproj
@@ -155,6 +155,7 @@
     <ClInclude Include="include\hive_array2.h" />
     <ClInclude Include="include\hive_config.h" />
     <ClInclude Include="include\hive_geometry.h" />
+    <ClInclude Include="include\hive_inplace_minheap.h" />
     <ClInclude Include="include\hive_math.h" />
     <ClInclude Include="include\hive_minheap.h" />
     <ClInclude Include="include\hive_polygon.h" />
