Add a very naive implementation of creeping via tumor chaining

--- a/hivemind/hivemind.vcxproj
+++ b/hivemind/hivemind.vcxproj
@@ -167,6 +167,7 @@
     <ClInclude Include="include\map.h" />
     <ClInclude Include="include\map_analysis.h" />
     <ClInclude Include="include\messaging.h" />
+    <ClInclude Include="include\myself.h" />
     <ClInclude Include="include\pathfinding.h" />
     <ClInclude Include="include\pathing.h" />
     <ClInclude Include="include\platform_windows.h" />
@@ -218,6 +219,7 @@
     <ClCompile Include="src\map.cpp" />
     <ClCompile Include="src\map_analysis.cpp" />
     <ClCompile Include="src\messaging.cpp" />
+    <ClCompile Include="src\myself.cpp" />
     <ClCompile Include="src\pathfinding.cpp" />
     <ClCompile Include="src\pathing.cpp" />
     <ClCompile Include="src\platform_windows.cpp" />
