--- a/.editorconfig
+++ b/.editorconfig
@@ -3,6 +3,6 @@ root = true
 [*.{cc,cpp,h,hpp}]
 indent_style = space
 indent_size = 2
-end_of_line = lf
+end_of_line = crlf
 charset = utf-8-bom
 trim_trailing_whitespace = true
